content/nomad/v1.0.x/content/docs/commands/alloc/restart.mdx
---
layout: docs
page_title: 'Commands: alloc restart'
sidebar_title: restart
description: |
  Restart a running allocation or task
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-10T11:41:43-05:00
last_modified: 2025-10-10T11:41:43-05:00
# END AUTO GENERATED METADATA
---

# Command: alloc restart

The `alloc restart` command allows a user to perform an in place restart of an
an entire allocation or individual task.

## Usage

```plaintext
nomad alloc restart [options] <allocation> <task>
```

This command accepts a single allocation ID and a task name. The task name must
be part of the allocation and the task must be currently running. The task name
is optional and if omitted every task in the allocation will be restarted.

When ACLs are enabled, this command requires a token with the
`alloc-lifecycle`, `read-job`, and `list-jobs` capabilities for the
allocation's namespace.

## General Options

@include 'general_options.mdx'

## Restart Options

- `-verbose`: Display verbose output.

## Examples

```shell-session
$ nomad alloc restart eb17e557

$ nomad alloc restart eb17e557 foo
Could not find task named: foo, found:
* test
<blocking>
```
